# terraso-backend

./: .coveragerc  .editorconfig  .env  .env.sample  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CLIENT_MIGRATION_GUIDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.base  Dockerfile.base.dockerignore  Dockerfile.dev  Dockerfile.dockerignore  Dockerfile.sync  EXPORT_SETUP.md  MIGRATION_COMMIT_PLAN.md  Makefile  README.md  clean_migration.sh  docker-compose.base.yml  docker-compose.ci.yml  docker-compose.dev.yml  docker-compose.yml  dump_export_tokens.sh  get_user_export_token.sh  overrides.txt  package.json  pyproject.toml  pytest.ini  regenerate_clean_migrations.sh  regenerate_migrations_properly.sh  requirements-dev.txt  requirements.txt  restore.conf  restore_from_render.sh  sampledata.json  setup.cfg  test_1_setup_db.sh  test_2_test_exports.sh  (+2 more)
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: build.yml  check-commits.yml  clean-cache.yml  codeql.yml
backup/: Dockerfile  backup.sh  env.sample  url_rewrites.conf
docs/: anonymous_access.md  apple_certificates.md  e2e_test_users.md  microsoft_openid.md  unauthenticated_access.md
makefiles/: docker.make  install.make
requirements/: base.in  deploy.in  dev.in
scripts/: backup.sh  commit-msg.sample  docker.sh  exports.txt  pre-commit.sample  rebuild.sh  run.sh
scripts/database/: restore_from_render.sh
scripts/export/: dump_export_tokens.sh  get_user_export_token.sh  render_logs.py
terraso_backend/: manage.py
(+561 files in other folders)
